// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> behaviour tests is false after two clicks 1`] = `
<input
  checked={true}
  className="GUIMCheckbox  GUIMCheckboxBlue"
  name="checkbox"
  onChange={[Function]}
  style={Object {}}
  type="checkbox"
/>
`;

exports[`<Checkbox /> behaviour tests match snapshot 1`] = `
<input
  checked={false}
  className="GUIMCheckbox  GUIMCheckboxBlue"
  name="checkbox"
  onChange={[Function]}
  style={Object {}}
  type="checkbox"
/>
`;
